# solid-octo-pancake

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: listings.jsonl  raw_search_results.jsonl  search_results.txt
src/homematch/: __init__.py  __main__.py  _model.py  _models.py  gen.py  generate.py  schemas.py  search.py  store.py  utils.py
src/homematch/embeddings/: store.py
src/homematch/search/: chat.py  retriever.py
