[project]
name = "homematch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
]

[project.scripts]
homematch = "homematch.__main__:cli"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.1",
]
